Update timeline + valraiso logo

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,7 +6,7 @@
   },
 
   "body": {
-    "intro": "Hello World"
+    "intro": "<photo> / <intro> / Languages: French, English"
   },
 
   "cards": {
