Add routes / pages + contact button

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,6 +9,11 @@
     "intro": "<photo> / <intro> / Languages: French, English"
   },
 
+  "footer": {
+    "contact": "Contact me",
+    "home": "Back home page"
+  },
+
   "cards": {
     "technologies_used": "Technologies used:",
     "technologies_learnt": "Technologies learnt:",
