--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -20,6 +20,8 @@
     "unfold": "Unfold",
     "previous": "Previous",
     "next": "Next",
+    "months": " months",
+    "years": " years",
     "experiences": [
       {
         "name": "SmartShoot",
@@ -51,7 +53,8 @@
         "location": "Lyon",
         "title": "Teaching Assistant & Student Coach",
         "date_start": "2018-02",
-        "date_end": "2019-03",
+        "date_end": "2021-03",
+        "duration": 18,
         "description": [
           "Part time job to support first and second year students in their scholarship: project assistance, technical advisory..."
         ],
