Add intro component

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,6 +9,13 @@
     "intro": "<photo> / <intro> / Languages: French, English"
   },
 
+  "intro": {
+    "title": "Software Developer",
+    "years": "years old",
+    "location": "Lyon, France",
+    "description": "Interested in artificial intelligence and machine learning, I’m looking for an internship where I can contribute with my skills in C, C++, Python and Javascript (Vue.Js, React)."
+  },
+
   "footer": {
     "contact": "Contact me",
     "home": "Back home page"
