Remove nav for home page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,6 +13,7 @@
     "title": "Software Developer",
     "years": "years old",
     "location": "Lyon, France",
+    "subtitle": "Looking for a 6 month internship",
     "description": "Interested in artificial intelligence and machine learning, I’m looking for an internship where I can contribute with my skills in C, C++, Python and Javascript (Vue.Js, React)."
   },
 
