--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -63,7 +63,7 @@
         "description": [
           "Assistant à temps partielle pour le suivis des étudiants de première, deuxième et troisième en parralle de mes études.",
           "Supervision des étudiants, corrections de projets, coaching des équipes projets.",
-          "Ces missions au sein de l'école m'ont permis de suivre des 3 formations qui me sont validé par une certification (Teaching & Coaching)."
+          "Ces missions au sein de l'école m'ont permis de suivre 3 formations qui me sont validé par une certification (Teaching & Coaching)."
         ],
         "technologies": [
           "C",
