add close button on project page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,6 +27,8 @@
     "next": "Next",
     "months": " months",
     "years": " years",
+    "see_demo": "See Demo",
+    "close": "Close",
     "experiences": [
       {
         "name": "SmartShoot",
