Add marioscene gif

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -184,7 +184,7 @@
             "sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
           ],
           "link": "https://github.com/Faroito/MarioScene",
-          "gif": "/project-background/mario-scene.png",
+          "gif": "/project-background/marioscene.gif",
           "technologies": [
             "C++",
             "CMake",
