--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -184,13 +184,13 @@
             "sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
           ],
           "link": "https://github.com/Faroito/MarioScene",
-          "gif": "/project-background/mario-scene.png",
+          "gif": "/project-background/marioscene.gif",
           "technologies": [
             "C++",
             "CMake",
             "OpenGL"
           ]
-      },
+      },  
       {
         "name": "A-MAZing",
         "title": "OpenGL project with physic simulation, boids and pathfinding.",
